[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t1t2converter"
version = "0.1.0"
description = "Conversion of MRI images from T1 to T2 relaxation time using deep learning models."
authors = [
    { name="Andrea Moschetto", email="andreamoschetto99@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "anyio==4.7.0",
    "argon2-cffi==21.3.0",
    "asttokens==3.0.0",
    "attrs==24.3.0",
    "babel==2.16.0",
    "beautifulsoup4==4.12.3",
    "bleach==6.2.0",
    "bottleneck==1.4.2",
    "cffi==1.17.1",
    "cycler==0.11.0",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "deprecated==1.2.13",
    "einops==0.8.1",
    "filelock==3.17.0",
    "fonttools==4.55.3",
    "fsspec==2025.3.2",
    "gmpy2==2.2.1",
    "h11==0.14.0",
    "httpcore==1.0.2",
    "httpx==0.28.1",
    "imageio==2.37.0",
    "importlib-metadata==8.5.0",
    "ipykernel==6.29.5",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "json5==0.9.25",
    "jsonschema==4.23.0",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyter-events==0.12.0",
    "jupyter-server==2.15.0",
    "jupyterlab==4.3.4",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "lightning-utilities==0.11.9",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mistune==3.1.2",
    "monai==1.3.2",
    "mpmath==1.3.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "notebook==7.3.2",
    "numexpr==2.10.1",
    "numpy==2.0.1",
    "pandas==2.2.3",
    "pandocfilters==1.5.0",
    "parso==0.8.4",
    "pexpect==4.8.0",
    "pillow==11.1.0",
    "pip==25.1",
    "prometheus-client==0.21.1",
    "prompt-toolkit==3.0.43",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycparser==2.21",
    "pygments==2.19.1",
    "pyparsing==3.2.0",
    "pyqt==6.7.1",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml",  # Optional: used by many ML and config tools
    "scipy",   # Likely needed alongside numpy, if omitted earlier
    "setuptools",  # Required for most build workflows
]
