[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t1t2converter"
version = "0.1.0"
description = "Conversion of MRI images from T1 to T2 relaxation time using deep learning models."
authors = [
    { name="Andrea Moschetto", email="andreamoschetto99@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "monai>=1.3.2",
    "monai-generative==0.2.3",
    "torch>=2.0",
    "torchvision>=0.20",
    "matplotlib",
    "numpy",
    "pandas",
    "tqdm",
    "scikit-image",
    "pillow>=11.0",
    "einops",
    "torchmetrics",
    "wandb",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
